[package]
name = "nws-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
select = "0.6.0-alpha.1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wkt = "0.9"
url = { version = "2.2", features = ["serde"] }
chrono = "0.4"
strum = "0.24"
strum_macros = "0.24"